Fixed bug in nav where it was covering other elements and not allowing interaction with those elements.

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,5 @@ h1 {
 
 a {
   text-decoration: none;
+  color: #000;
 }
